--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -125,3 +125,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VS Code
+.vscode
