--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Temporary website for Ejay's project.",
   "main": "app.js",
+  "engines": {
+    "node": "12.18.x"
+  },
   "scripts": {
     "build": "cd client && npm run build && rm -rf ../build && mv build/ ../",
     "debug": "nodemon --nolazy src/app.js"
