--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "12.18.x"
   },
   "scripts": {
-    "build": "cd client && npm run build && rm -rf ../build && mv build/ ../",
+    "build": "cd client && npm i && npm run build && rm -rf ../build && mv build/ ../",
     "debug": "nodemon --nolazy src/app.js"
   },
   "repository": {
